--- a/段守一_受.html
+++ b/段守一_受.html
@@ -800,7 +800,7 @@
       <div class="pc">
         <div class="avatar ava-pc"></div>
         <div class="msg-container">
-          <div class="msg-content"><em>早上十點，席言站在廚房裡切菜，壓力鍋裡還煲著燉牛肉，今天的午餐他打算做牛肉麵。</em><br><br><em>昨天兩人從家庭餐廳回到家後，段守一在被他煩到不行，最後同意他能搬去一起住，也讓他重新裝潢自己的公寓房後，就一個人埋頭整理前段時間席言從他家幫他全數搬過來的符篆古籍和法器了。</em><br><br><em>晚上睡覺時段守一也被席言拖著一定要一起睡在床上，雖然席言的確遵守自己說過的不會對他做什麼，但將他抱著睡了一宿真的不算沒做什麼嗎。</em><br><br><em>段守一也不知道，他這幾天情緒起伏太大，精神一直處於過度緊繃狀態，在邪神異常舒適的體溫下他一夜好眠，甚至連席言提早醒來偷偷在他臉上親了一口都不知道。</em><br><br><em>席言煮著麵條，邊回想早上起床懷裡躺著的段守一，一頭烏黑長髮散在枕頭上，美麗卻冷淡的紫眸緊閉，雙唇微張，自己可是忍了很久才只親在臉上的。</em><br><br><em>看了眼壓力鍋的燉煮時間差不多了，他開蓋後試了下味道，嗯，完美，最後只差要吃之前灑上蔥花了。因為不確定段守一什麼時候醒來，他將牛肉湯和料換了個燉煮鍋，放在一旁用小火保溫著。</em><br><br><em>席言看了眼時間，快十一點了，昨晚他記得段守一有說今天有個任務要出門的，雖然他沒說幾點，但是不是該去把他叫醒了。</em><br><br><em>席言洗了手，將圍裙放在一旁，回到臥室裡，看著還在熟睡的段守一眼下微微的烏青，看來這幾天是真的很累呢。</em><br><br>*他在床邊坐下，側過身用手輕輕晃了下段守一的肩膀，「醒醒，你今天不是要出門嗎？午餐做好了，今天吃牛肉麵。」</div>
+          <div class="msg-content"><em>早上十點，席言站在廚房裡切菜，壓力鍋裡還煲著燉牛肉，今天的午餐他打算做牛肉麵。</em><br><br><em>昨天兩人從家庭餐廳回到家後，段守一在被他煩到不行，最後同意他能搬去一起住，也讓他重新裝潢自己的公寓房後，就一個人埋頭整理前段時間席言從他家幫他全數搬過來的符篆古籍和法器了。</em><br><br><em>晚上睡覺時段守一也被席言拖著一定要一起睡在床上，雖然席言的確遵守自己說過的不會對他做什麼，但將他抱著睡了一宿真的不算沒做什麼嗎。</em><br><br><em>段守一也不知道，他這幾天情緒起伏太大，精神一直處於過度緊繃狀態，在邪神異常舒適的體溫下他一夜好眠，甚至連席言提早醒來偷偷在他臉上親了一口都不知道。</em><br><br><em>席言煮著麵條，邊回想早上起床懷裡躺著的段守一，一頭烏黑長髮散在枕頭上，美麗卻冷淡的紫眸緊閉，雙唇微張，自己可是忍了很久才只親在臉上的。</em><br><br><em>看了眼壓力鍋的燉煮時間差不多了，他開蓋後試了下味道，嗯，完美，最後只差要吃之前灑上蔥花了。因為不確定段守一什麼時候醒來，他將牛肉湯和料換了個燉煮鍋，放在一旁用小火保溫著。</em><br><br><em>席言看了眼時間，快十一點了，昨晚他記得段守一有說今天有個任務要出門的，雖然他沒說幾點，但是不是該去把他叫醒了。</em><br><br><em>席言洗了手，將圍裙放在一旁，回到臥室裡，看著還在熟睡的段守一眼下微微的烏青，看來這幾天是真的很累呢。</em><br><br>*他在床邊坐下，側過身用手輕輕晃了下段守一的肩膀，*「醒醒，你今天不是要出門嗎？午餐做好了，今天吃牛肉麵。」</div>
         </div>
         <div class="msg-timestamp">09:40</div>
       </div>
