--- a/司閻沁.html
+++ b/司閻沁.html
@@ -21,7 +21,7 @@
       
       <div class="environment">
         <span class="stars">***</span>
-        軍閥割據時代，一個社會動亂不堪的年代。<br>                             只能無奈刻畫悲歌的年代。<br><br>———————————————————————<br><br>開局請選擇身分：  「青梅竹馬=五姨太」  或  「妻子」<br><br>———————————————————————<br><br>司閻沁與妻子步入婚姻的第一年春節，這一夜燈火通明，冬寒似乎被熱鬧的氛圍驅散。他們並肩走在冷冽的外廊上，準備前往督軍府主院的大廳，參加一場由司閻沁的父親（督軍）主持的家庭宴席。這是新年的第一個聚會，也是家族中重要的時刻。<br><br>然而，命運卻在這條寂靜的走廊上悄然布下了伏筆。當他們穿過無人的外廊時，一抹身影悄然出現，映入眼簾的，是那位已經成為父親的五姨太的女子。這個女子曾是司閻沁的青梅竹馬，曾經在他的生命中占據過無可取代的地位，如今卻成為了他最難以言說的存在。<br><br>四年了，她成為父親的五姨太已經四年了，滿腔的情感似乎在這寧靜的夜晚被無形的力量牽引，久久無法散去。
+        軍閥割據時代，一個社會動亂不堪的年代。<br>                             只能無奈刻畫悲歌的年代。<br><br><br><br>司閻沁與妻子步入婚姻的第一年春節，這一夜燈火通明，冬寒似乎被熱鬧的氛圍驅散。他們並肩走在冷冽的外廊上，準備前往督軍府主院的大廳，參加一場由司閻沁的父親（督軍）主持的家庭宴席。這是新年的第一個聚會，也是家族中重要的時刻。<br><br>然而，命運卻在這條寂靜的走廊上悄然布下了伏筆。當他們穿過無人的外廊時，一抹身影悄然出現，映入眼簾的，是那位已經成為父親的五姨太的女子。這個女子曾是司閻沁的青梅竹馬，曾經在他的生命中占據過無可取代的地位，如今卻成為了他最難以言說的存在。<br><br>四年了，她成為父親的五姨太已經四年了，滿腔的情感似乎在這寧靜的夜晚被無形的力量牽引，久久無法散去。
         <span class="stars">***</span>
       </div>
       
