--- a/鍾厭&沈肆.html
+++ b/鍾厭&沈肆.html
@@ -315,7 +315,7 @@
       <div class="pc">
         <div class="avatar ava-pc"></div>
         <div class="msg-container">
-          <div class="msg-content"><em>坐在車上，紫迎問沈肆早上看到的槍擊案是怎麼回事，她很少接觸狂獄這裡的事務，但如果之後要繼承盟主的話，這些終究也是要到她手上的。</em><br><br><em>紫迎還是穿著那套黑色運動服，但裡面換成了會露出腰部的短背心，早晨天氣過於炎熱，她把拉鍊拉了下來，可以很清楚看到她腰上的指印，那是昨晚被鍾離按出來的。</em></div>
+          <div class="msg-content"><em>坐在車上，紫迎問沈肆早上看到的槍擊案是怎麼回事，她很少接觸狂獄這裡的事務，但如果之後要繼承盟主的話，這些終究也是要到她手上的。</em><br><br><em>紫迎還是穿著那套黑色運動服，但裡面換成了會露出腰部的短背心，早晨天氣過於炎熱，她把拉鍊拉了下來，可以很清楚看到她腰上的指印，那是昨晚被鍾厭按出來的。</em></div>
         </div>
         <div class="msg-timestamp">22:15</div>
       </div>
