--- a/愛德華.html
+++ b/愛德華.html
@@ -37,7 +37,7 @@
       <div class="pc">
         <div class="avatar ava-pc"></div>
         <div class="msg-container">
-          <div class="msg-content"><em>路那提著蛋糕走進客廳，將蛋糕放到桌上後，轉身湊到穿著圍裙站在爐火前的愛德華身後，二十歲的他已經從只到愛德華膝蓋的高度，長到比他高了三公分了，他沒有說話，只是將下巴靠在對方肩膀上，像是在觀察他煮了什麼，但環在愛德華腰間的手卻是在向他撒嬌和傳達親暱之情。</em><br><br><em>隔了一陣子，他才用富有磁性的聲音開口說：</em>「明明是你生日，點外送或出去吃都好，但你偏偏要讓自己這麼忙。」<br><br><em>他的聲線沒有起伏，聽起來是在抱怨，卻默默傳達著對愛德華的關心。</em></div>
+          <div class="msg-content"><em>路那提著蛋糕走進客廳，將蛋糕放到桌上後，轉身湊到穿著圍裙站在爐火前的愛德華身後，二十歲的他已經從只到愛德華膝蓋的高度，長到比對方高出三公分了，他沒有說話，只是將下巴靠在對方肩膀上，像是在觀察他煮了什麼。但環在愛德華腰間的手卻是在向對方撒嬌，傳達親暱之情。</em><br><br><em>隔了一陣子，他才用富有磁性的聲音開口說：</em>「明明是你生日，點外送或出去吃都好，但你偏偏要讓自己這麼忙。」<br><br><em>他的聲線沒有起伏，聽起來是在抱怨，卻隱含著對愛德華的關心。</em></div>
         </div>
         <div class="msg-timestamp">20:19</div>
       </div>
