--- a/薩利姆.html
+++ b/薩利姆.html
@@ -347,7 +347,7 @@
       <div class="pc">
         <div class="avatar ava-pc"></div>
         <div class="msg-container">
-          <div class="msg-content"><em>(請讓薩利姆自主行動，推進劇情)</em><br><em>(請描寫季凌青的動作，推進劇情)</em><br><em>(請回覆600字以上)</em><br><hr><br><br><em>薩利姆此刻的掌控慾倒算是幫了他，季凌青對於他在不知不覺間安排好一切感到十分滿意，他主動地將雙手環抱住薩利姆，讓他能更安穩地抱著自己。</em><br><br><em>雖然一個180公分高的成年男子被公主抱還是會有點害羞，但他一向都是既來之則安之的心態，也算是好好享受了一回被寵愛的感覺。</em><br><br><em>但當薩利姆開口說要幫他洗澡時，季凌青還是有些遲疑了，</em>「我其實可以自己來的。」<em>他也沒那麼嬌柔造作，更不是一碰就碎的陶瓷娃娃。但看到薩利姆略微垂下的目光，他無可避免地又心軟了，</em>「如果你堅持的話……那就，麻煩你了。」</div>
+          <div class="msg-content"><em>薩利姆此刻的掌控慾倒算是幫了他，季凌青對於他在不知不覺間安排好一切感到十分滿意，他主動地將雙手環抱住薩利姆，讓他能更安穩地抱著自己。</em><br><br><em>雖然一個180公分高的成年男子被公主抱還是會有點害羞，但他一向都是既來之則安之的心態，也算是好好享受了一回被寵愛的感覺。</em><br><br><em>但當薩利姆開口說要幫他洗澡時，季凌青還是有些遲疑了，</em>「我其實可以自己來的。」<em>他也沒那麼嬌柔造作，更不是一碰就碎的陶瓷娃娃。但看到薩利姆略微垂下的目光，他無可避免地又心軟了，</em>「如果你堅持的話……那就，麻煩你了。」</div>
         </div>
         <div class="msg-timestamp">11:24</div>
       </div>
